--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,73 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
-</head>
-<body>
-
-
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
-    </div>
-
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
-      font-family:'helvetica neue';
+      background: #018DED url(http://unsplash.it/1500/1000?image=881);
+      background-size: cover;
+      font-family: 'helvetica neue';
       text-align: center;
       font-size: 10px;
     }
 
     body {
       font-size: 2rem;
-      display:flex;
-      flex:1;
+      display: flex;
+      flex: 1;
       min-height: 100vh;
       align-items: center;
     }
 
     .clock {
-      width: 30rem;
-      height: 30rem;
-      border:20px solid white;
-      border-radius:50%;
-      margin:50px auto;
+      width: 40vmin;
+      height: 40vmin;
+      border: 3vmin solid white;
+      border-radius: 50%;
+      margin: 50px auto;
       position: relative;
-      padding:2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+      padding: 2rem;
+      box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-.5vmin);
+      /* account for the height of the clock hands */
     }
 
     .hand {
-      width:50%;
-      height:6px;
-      background:black;
+      width: 50%;
+      height: 1vmin;
+      background: black;
       position: absolute;
-      top:50%;
+      top: 50%;
+      border-radius: .5vmin;
+      box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+      transform-origin: right;
+      transition: all .2s ease-out;
     }
-
   </style>
+</head>
+
+<body>
+
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
+    </div>
+  </div>
 
   <script>
+    var doc = document;
+    const hoursHand = doc.querySelector('.hour-hand');
+    const minHand = doc.querySelector('.min-hand');
+    const secHand = doc.querySelector('.second-hand');
 
+    function setTime() {
+      const now = new Date();
+      const hours = now.getHours();
+      const mins = now.getMinutes();
+      const secs = now.getSeconds();
 
+      hoursHand.style.transform = 'rotate(' + getTransform(hours, true) + ')';
+
+      minHand.style.transform = 'rotate(' + getTransform(mins) + ')';
+      secHand.style.transform = 'rotate(' + getTransform(secs) + ')';
+    }
+
+    function getTransform(time, isHours) {
+      var sectionsCount = isHours ? 12 : 60;
+      var result = 360 / sectionsCount * time + 90;
+      return result + 'deg';
+    }
+
+    setInterval(setTime, 1000);
   </script>
 </body>
+
 </html>
