--- a/29 - Countdown Timer/index.html
+++ b/29 - Countdown Timer/index.html
@@ -9,13 +9,14 @@
 <body>
   <div class="timer">
     <div class="timer__controls">
+      <button data-time="5" class="timer__button">5 Secs</button>
       <button data-time="20" class="timer__button">20 Secs</button>
       <button data-time="300" class="timer__button">Work 5</button>
       <button data-time="900" class="timer__button">Quick 15</button>
       <button data-time="1200" class="timer__button">Snack 20</button>
-      <button data-time="3600" class="timer__button">Lunch Break</button>
-      <form name="customForm" id="custom">
-        <input type="text" name="minutes" placeholder="Enter Minutes">
+      <button data-time="5600" class="timer__button">Lunch Break</button>
+      <form name="customForm" id="form">
+        <input type="number" name="minutes" id="minutes" placeholder="Enter Minutes">
       </form>
     </div>
     <div class="display">
