--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -3,28 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
-</head>
-<body>
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
-  <div class="controls">
-    <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
-
-    <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
-
-    <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
-  </div>
-
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
-
-  <style>
-
-    /*
+<style>    /*
       misc styles, nothing to do with CSS variables
     */
+
+    :root {
+      --spacing: 0;
+      --blur: 0;
+      --base: #ffc600;
+    }
 
     body {
       text-align: center;
@@ -45,9 +33,58 @@
     input {
       width:100px;
     }
+
+    .pic {
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+      background: var(--base);
+    }
+
+    .hl {
+      color: var(--base);
+    }
+
   </style>
+</head>
+<body>
+  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+
+  <div class="controls">
+    <label for="spacing">Spacing:</label>
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+
+    <label for="blur">Blur:</label>
+    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+
+    <label for="base">Base Color</label>
+    <input id="base" type="color" name="base" value="#ffc600">
+  </div>
+
+  <img class="pic" src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <script>
+
+  const doc = document;
+  const rootElem = doc.documentElement;
+  const spacing = doc.getElementById('spacing');
+  const blur = doc.getElementById('blur');
+  const base = doc.getElementById('base');
+
+  var inputs = doc.querySelectorAll('input');
+
+  inputs.forEach(function ( elem ) {
+    setVar.apply( elem );
+
+    elem.addEventListener('input', setVar);
+  });
+
+  function setVar() {
+    var styles = getComputedStyle( rootElem );
+    var units = this.dataset.sizing || '';
+
+    rootElem.style.setProperty(`--${this.name}`, this.value + units);
+  }
+
   </script>
 
 </body>
