--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,42 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    const currentYear = (new Date()).getFullYear();
+    const some = people.some( item => currentYear - item.year > 19 );
+    console.log( some );
+    console.log( {some} );
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    const every = people.every( item => currentYear - item.year > 19 );
+    console.log( every, 2017 - 19 );
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const find = comments.find( item => item.id === 823423 );
+    console.log( find );
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    console.table( comments );
+
+    const index = comments.findIndex( item => item.id === 823423 );
+    console.log( index );
+    // delete comments[ index ];
+    // comments.splice(index, 1);
+
+    console.table( comments );
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+
+    console.table( newComments );
 
   </script>
 </body>
