--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -15,24 +15,115 @@
 
   <div class="wrapper">
     <h2>LOCAL TAPAS</h2>
+
     <p></p>
+
     <ul class="plates">
       <li>Loading Tapas...</li>
     </ul>
+
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+
+      <div class="controls">
+        <input type="button" id="checkAll" value="Check All">
+        <input type="button" id="uncheckAll" value="Uncheck All">
+        <input type="button" id="clear" value="Clear list">
+      </div>
     </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+  const checkAllControl = document.querySelector('#checkAll');
+  const uncheckAllControl = document.querySelector('#uncheckAll');
+  const clearControl = document.querySelector('#clear');
+
+  function addItem(e) {
+    e.preventDefault();
+    const text = this.querySelector('[name="item"]').value;
+    const item = {
+      text: text,
+      done: false
+    };
+
+    items.push(item);
+
+    // console.table(items);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+
+    this.reset();
+  }
+
+  function populateList( plates = [], platesList) {
+    // console.log(plates, platesList);
+    platesList.innerHTML = plates.map((item, i) => {
+      const checked = item.done ? 'checked' : '';
+      return `
+        <li>
+          <input type="checkbox" id="item-${i}" data-index="${i}" ${checked}/>
+          <label for="item-${i}">${item.text}</label>
+        </li>
+      `;
+    }).join('');
+  }
+
+  function toggleDone(e) {
+    const elem = e.target;
+    if (!elem.matches('INPUT')) {
+      return;
+    }
+    const index = elem.dataset.index
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function checkAll() {
+    const plates = itemsList.querySelectorAll('input[type="checkbox"]');
+
+    plates.forEach(plate => {
+      plate.checked = true;
+      const index = plate.dataset.index
+      items[index].done = plate.checked;
+    });
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function uncheckAll() {
+    const plates = itemsList.querySelectorAll('input[type="checkbox"]');
+
+    plates.forEach(plate => {
+      plate.checked = false;
+      const index = plate.dataset.index
+      items[index].done = plate.checked;
+    });
+
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function clear() {
+    items.splice(0,items.length);
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+  checkAllControl.addEventListener('click', checkAll);
+  uncheckAllControl.addEventListener('click', uncheckAll);
+  clearControl.addEventListener('click', clear);
+
+  populateList(items, itemsList);
+
+
+
 
 </script>
 
 
 </body>
 </html>
-
