--- a/19 - Webcam Fun/index.html
+++ b/19 - Webcam Fun/index.html
@@ -10,23 +10,23 @@
   <div class="photobooth">
     <div class="controls">
       <button onClick="takePhoto()">Take Photo</button>
-<!--       <div class="rgb">
+      <!-- <div class="rgb">
         <label for="rmin">Red Min:</label>
-        <input type="range" min=0 max=255 name="rmin">
+        <input type="range" min=0 max=255 name="rmin" value="20">
         <label for="rmax">Red Max:</label>
         <input type="range" min=0 max=255 name="rmax">
 
         <br>
 
         <label for="gmin">Green Min:</label>
-        <input type="range" min=0 max=255 name="gmin">
+        <input type="range" min=0 max=255 name="gmin" value="20">
         <label for="gmax">Green Max:</label>
         <input type="range" min=0 max=255 name="gmax">
 
         <br>
 
         <label for="bmin">Blue Min:</label>
-        <input type="range" min=0 max=255 name="bmin">
+        <input type="range" min=0 max=255 name="bmin" value="20">
         <label for="bmax">Blue Max:</label>
         <input type="range" min=0 max=255 name="bmax">
       </div> -->
