--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -22,7 +22,7 @@
       <label for="pitch">Pitch:</label>
 
       <input name="pitch" type="range" min="0" max="2" step="0.1">
-      <textarea name="text">Hello! I love JavaScript 👍</textarea>
+      <textarea name="text">Hello! I love JavaScript 👍 </textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
 
@@ -33,8 +33,54 @@
   let voices = [];
   const voicesDropdown = document.querySelector('[name="voice"]');
   const options = document.querySelectorAll('[type="range"], [name="text"]');
+  const textField = document.querySelector('[name="text"]');
   const speakButton = document.querySelector('#speak');
   const stopButton = document.querySelector('#stop');
+
+  msg.text = textField.value;
+
+  function start() {
+    speechSynthesis.speak(msg);
+  }
+
+  function stop() {
+    speechSynthesis.cancel();
+  }
+
+  function addVoices() {
+    voices = this.getVoices();
+
+    voicesDropdown.innerHTML += voices
+      .filter(voice => voice.lang.includes('ru') || voice.lang.includes('en'))
+      .map(voice => {
+      return `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`;
+      })
+      .join('');
+  }
+
+  function changeVoice() {
+    msg.voice = voices.find(item => item.name === this.value);
+    toggle();
+  }
+
+  function toggle() {
+    speechSynthesis.cancel();
+    speechSynthesis.speak(msg);
+  }
+
+  function changeProp() {
+    msg[this.name] = this.value;
+    toggle();
+  }
+
+  voicesDropdown.addEventListener('change',changeVoice)
+  speakButton.addEventListener('click', start);
+  stopButton.addEventListener('click', stop);
+
+  options.forEach(item => item.addEventListener('input', changeProp));
+
+  speechSynthesis.addEventListener('voiceschanged',addVoices)
+
 </script>
 
 </body>
