--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -9,7 +9,11 @@
 <body>
 
   <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+
+  <div class="status">
+    <button class="status__start" onClick="startGame()">Start!</button>
+    <div class="status__text">Game over</div>
+  </div>
 
   <div class="game">
     <div class="hole hole1">
@@ -36,6 +40,100 @@
   const holes = document.querySelectorAll('.hole');
   const scoreBoard = document.querySelector('.score');
   const moles = document.querySelectorAll('.mole');
+  const statusBar = document.querySelector('.status');
+  const statusText = document.querySelector('.status__text');
+  const statusStart = document.querySelector('.status__start');
+
+  let lastHolePos = null;
+  const timeShowMax = 1; //seconds
+  const timeGameMax = 10; //seconds
+  let myInt = null;
+  let currentTime = timeGameMax;
+
+  let isGaming = false;
+
+function randTime(min, max) {
+  return Math.random() * (max - min) + min;
+}
+
+//---------------------------------------------
+
+function startGame() {
+  isGaming = true;
+  currentTime = timeGameMax;
+  statusBar.dataset.status = 'playing';
+  scoreBoard.textContent = 0;
+
+  showTime();
+  jump();
+
+  myInt = setInterval(showTime,1000);
+
+  setTimeout(endGame, timeGameMax * 1000);
+}
+
+//---------------------------------------------
+
+function showTime() {
+  let showTime = currentTime--;
+
+  if(showTime < 10) {
+    showTime = `0${showTime}`;
+  }
+
+  statusText.textContent = `0:${showTime}`;
+}
+
+//---------------------------------------------
+
+function endGame() {
+  isGaming = false;
+  statusBar.dataset.status = 'finished';
+  statusText.textContent = 'Game over';
+  statusStart.textContent = 'Play again';
+  clearInterval(myInt);
+}
+
+//---------------------------------------------
+
+function getRandomHole() {
+  let holePos = Math.floor(Math.random() * holes.length);
+  while(holePos === lastHolePos) {
+    holePos = Math.floor(Math.random() * holes.length);
+  }
+  const hole = holes[holePos];
+  lastHolePos = holePos;
+  return hole;
+}
+
+//---------------------------------------------
+
+function jump() {
+  if (!isGaming) {
+    return;
+  }
+
+  const hole = getRandomHole();
+  hole.classList.add('up');
+
+  setTimeout(()=> {
+    hole.classList.remove('up');
+    jump();
+  }, randTime(.2, timeShowMax) * 1000);
+
+  hole.addEventListener('click', plusScore);
+}
+
+//---------------------------------------------
+
+function plusScore(e) {
+    if (!e.isTrusted) {
+      return false;
+    }
+    this.classList.remove('up');
+    scoreBoard.textContent = ++scoreBoard.textContent;
+    this.removeEventListener('click', plusScore);
+}
 
 </script>
 </body>
